# Architecture-Decision-Record-Warehouse

./: .gitignore  LICENSE.txt  Makefile  README.md
docker/: docker-compose.dev.yml
documentation/: definitions.md
documentation/adr/: architecture-style_nygard.md  architecture-style_y-adr.md
scripts/: init-architectural-knowledge.sh
source/agent/: .env  Dockerfile  cmd.py  main.py  mcp_server.py  pyproject.toml
source/agent/documentation/: log.csv
source/agent/documentation/template/: extract_architectural_knowledge.json  extract_architectural_knowledge.md
source/agent/documentation/template/examples/: best-case-gemma.md  best-case.md
source/agent/router/: agent_router.py  non_functional_requirement_router.py
source/agent/source/application/: agent_service.py  non_functional_requirement_service.py
source/agent/source/application/agent/: __init__.py  adapter.py  command.py  entity.py  repository.py  service.py  use_case.py
source/agent/source/application/domain/agent/: entitiy.py
source/agent/source/application/domain/non_functional_requirement/: enitity.py  exception.py
source/agent/source/application/domain/prompt/: entity.py
source/agent/source/application/port/use_case/: agent_use_case.py
source/agent/source/application/port/use_case/command/: extract_architectural_knowledge_command.py
source/agent/source/infrastructure/: agent_adapter.py  agent_repository.py  mongodb_repository.py  neo4j_non_functional_requirement_repository.py  ollama_adapter.py
source/agent/source/interface/: agent_controller.py
source/backend/: Dockerfile  pom.xml  (+1 more)
(+670 files in other folders)
