[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "anthropic>=0.64.0",
  "fastapi[standard]>=0.116.1",
  "httptools>=0.6.4",
  "mcp[cli]>=1.13.1",
  "pydantic>=2.11.7",
  "pymongo>=4.15.2",
  "python-dotenv>=1.1.1",
  "requests>=2.32.5",
]

[tool.pyright]
include = ["source"]
